// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkInteractiveStar should render correctly with a selected full star 1`] = `
<button
  aria-label="One star"
  aria-pressed={true}
  className="bpk-interactive-star bpk-interactive-star--selected"
  onClick={[Function]}
  onMouseEnter={[Function]}
  type="button"
>
  <svg
    className="bpk-star bpk-star--filled bpk-interactive-star__icon bpk-interactive-star__icon--selected bpk-icon--rtl-support"
    height="18"
    style={
      Object {
        "height": "1.125rem",
        "width": "1.125rem",
      }
    }
    viewBox="0 0 24 24"
    width="18"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M17.349 14.762l3.535-4.415a.528.528 0 0 0-.26-.838L15.35 8.131l-2.915-4.887a.484.484 0 0 0-.841 0l-2.881 4.83-5.337 1.394a.528.528 0 0 0-.26.839L6.61 14.67l-.383 5.748a.5.5 0 0 0 .68.518l5.04-3.172 5.1 3.198a.5.5 0 0 0 .68-.518z"
    />
  </svg>
</button>
`;

exports[`BpkInteractiveStar should render correctly with empty star 1`] = `
<button
  aria-label="One star"
  aria-pressed={false}
  className="bpk-interactive-star"
  onClick={[Function]}
  onMouseEnter={[Function]}
  type="button"
>
  <svg
    className="bpk-star bpk-interactive-star__icon bpk-icon--rtl-support"
    height="18"
    style={
      Object {
        "height": "1.125rem",
        "width": "1.125rem",
      }
    }
    viewBox="0 0 24 24"
    width="18"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M17.349 14.762l3.535-4.415a.528.528 0 0 0-.26-.838L15.35 8.131l-2.915-4.887a.484.484 0 0 0-.841 0l-2.881 4.83-5.337 1.394a.528.528 0 0 0-.26.839L6.61 14.67l-.383 5.748a.5.5 0 0 0 .68.518l5.04-3.172 5.1 3.198a.5.5 0 0 0 .68-.518z"
    />
  </svg>
</button>
`;

exports[`BpkInteractiveStar should render correctly with full star 1`] = `
<button
  aria-label="One star"
  aria-pressed={false}
  className="bpk-interactive-star"
  onClick={[Function]}
  onMouseEnter={[Function]}
  type="button"
>
  <svg
    className="bpk-star bpk-star--filled bpk-interactive-star__icon bpk-icon--rtl-support"
    height="18"
    style={
      Object {
        "height": "1.125rem",
        "width": "1.125rem",
      }
    }
    viewBox="0 0 24 24"
    width="18"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M17.349 14.762l3.535-4.415a.528.528 0 0 0-.26-.838L15.35 8.131l-2.915-4.887a.484.484 0 0 0-.841 0l-2.881 4.83-5.337 1.394a.528.528 0 0 0-.26.839L6.61 14.67l-.383 5.748a.5.5 0 0 0 .68.518l5.04-3.172 5.1 3.198a.5.5 0 0 0 .68-.518z"
    />
  </svg>
</button>
`;
